package wr1ttenyu.f1nal.study.designpattern.pattern23.adapter.classadapter;

public class Voltage220V {

    public Integer getVoltage220V() {
        return 220;
    }

}
